--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="stylesheet" href="https://cdn.pannellum.org/2.5/pannellum.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>EDGE2 MTR</title>
+		<title>EDGE2 Invoicing</title>
 	</head>
 	<body>
 		<div id="root"></div>
