--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N1KLLF6CV"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KN0PQRDR90"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
-		  gtag('config', 'G-9N1KLLF6CV');
+		  gtag('config', 'G-KN0PQRDR90');
 		</script>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
